   NUT v2.7.4 release [#2395]

 - bicker_ser: added new driver for Bicker 12/24Vdc UPS via RS-232 serial
   communication protocol, which supports any UPS shipped with the PSZ-1053
   extension module. [PR #2448]

 - liebert-gxe: added new driver with support for Liebert GXE Series UPS
   (serial or USB posing as a serial port). [#2629]

 - usbhid-ups updates:
   * Support of the `onlinedischarge_log_throttle_hovercharge` in the NUT
     v2.8.2 release was found to be incomplete. [#2423, follow-up to #2215]
   * Added support for `interrupt_pipe_no_events_tolerance=N` setting to
     optionally prevent UPS lockup, indicated by continuous "Got 0 HID Objects"
     situation as a clue, by reconnecting on stale data.  Note that while some
     devices just report information upon subsequent poll and just have nothing
     urgent to declare with an USB interrupt, others (e.g. APC BXnnnnMI) were
     seen to lock up until a full connection restart. [#2671, #2681]
   * Added support for `lbrb_log_delay_sec=N` setting to delay propagation of
     `LB` or `LB+RB` state (buggy with APC BXnnnnMI devices circa 2023-2024).
     This may work better with flags like `onlinedischarge_calibration` and
     `lbrb_log_delay_without_calibrating` for some devices. [#2347]
   * General suggestion from `possibly_supported()` message method for devices
     with VendorID=`0x06da` (Phoenixtec), seen in some models supported by
     MGE HID or Liebert HID, updated to suggest trying `nutdrv_qx`. [#334]
   * MGE HID list of `mge_model_names[]` was extended for Eaton 9E, 5PX and 5SC
     series (largely guessing, feedback and PRs for adaptation to actual
     string values reported by devices via USB are welcome), so these devices
     would now report `battery.voltage` and `battery.voltage.nominal`. [#2380]
   * Added `ups.beeper.status` support for Masterpower MF-UPS650VA using the
     MGE HID subdriver. [#2662]
   * `powercom-hid` subdriver sent UPS shutdown commands in wrong byte order,