@@ -149,6 +149,12 @@ https://github.com/networkupstools/nut/milestone/11
  - liebert-gxe: added new driver with support for Liebert GXE Series UPS
    (serial or USB posing as a serial port). [#2629]
 
+ - `usbhid-ups` and `netxml-ups` updated to handle "No battery installed!"
+   alarm also to set the `RB` (Replace Battery) value in `ups.status`.
+   This may cause dual triggering of notifications (as an `ALARM` generally
+   and as an important `REPLBATT` status in particular) in `upsmon`, but
+   better safe than sorry. [#415]
+
  - usbhid-ups updates:
    * Support of the `onlinedischarge_log_throttle_hovercharge` in the NUT
      v2.8.2 release was found to be incomplete. [#2423, follow-up to #2215]
@@ -242,7 +248,7 @@ https://github.com/networkupstools/nut/milestone/11
    that there is no common standard for what constitutes an alarm and such
    alarm states were also previously observed for less severe reasons. This
    depends on the manufacturer/device-specific implementation in the driver.
-   [issue #2657, PR #2658]
+   [issues #415, #2657, PR #2658]
    * Updated documentation, end-user clients (CGI, NUT-Monitor UI);
    * Updated `upsmon` client with ability to report entering and exiting
      the ALARM status if reported by the driver;
